2002-06-07  Mo DeJong  <supermo@bayarea.net>

	* gui/includepane.tcl (mark_item, see_item): Set -fill to red
	for connecting lines when a "to" or "by" relationship is
	added. Call mark_item when a canvas id is passed to see_item
	and correctly deal with a canvas id passed to mark_item.

2002-06-07  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>

	* etc/Makefile.am: Add german.txt to etc_DATA.
	* etc/Makefile.in: Regen.
	* etc/english.txt.in: Remove unused ToUpgrade
	and fix minor typo.
	* etc/german.txt: Sync keywords with english.txt.in.
	Partially update the translations.
	* etc/japanese.txt: Sync keywords with english.txt.in.

2002-06-07  John Lash  <jlash@speakeasy.net>

	* etc/english.txt.in: Remove PafProjBusy and ProjAlreayOpened.
	Add ProjAlreadyOpenedThisProcess, ProjAlreadyOpenedOtherSystem,
	ProjAlreadyOpenedThisUser, and ProjAlreadyOpenedThisSystem.
	* etc/german.txt: Ditto, with empty place holders.
	* etc/japanese.txt: Ditto, with empty place holders.
	* gui/misc.tcl (sn_is_project_busy, sn_open_project,
	sn_read_project): Set a pid value so that callers can
	display the locked process pid. Return a more descriptive
	set of values so that callers can display more information
	about why the db is locked.
	* gui/projedit.tcl (can_create_project):
	* gui/projmng.tcl (sn_delete_project): Display a more
	descriptive set of errors after calling sn_is_project_busy.

2002-06-07  John Lash  <jlash@speakeasy.net>

	* gui/misc.tcl (sn_is_project_busy,
	sn_unix_check_process): Check to see if another
	process that holds a db lock is still alive using
	the /proc filesystem instead of kill -0. If we
	don't have access to /proc then default to
	kill -0 but only when the same user has the lock.
	Add new method that looks at the /proc filesystem
	for Linux, BSD, and Solaris style implementations.

2002-06-04  Mo DeJong  <supermo@bayarea.net>

	* patches/itk_pathname.patch: Remove patch
	since it has been integrated into the CVS
	at sources.redhat.com.
